--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   "license": "ISC",
   "devDependencies": {
     "grunt": "^0.4.5",
-	"grunt-contrib-jshint": "latest",
-	"jshint-stylish": "latest",
-    "grunt-contrib-uglify": "latest",
-    "grunt-contrib-less": "latest",
+    "grunt-contrib-copy": "latest",
     "grunt-contrib-cssmin": "latest",
-    "grunt-contrib-watch": "latest"
+    "grunt-contrib-jshint": "latest",
+    "grunt-contrib-less": "latest",
+    "grunt-contrib-uglify": "latest",
+    "grunt-contrib-watch": "latest",
+    "jshint-stylish": "latest"
   }
 }
