--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "grunt-contrib-less": "latest",
     "grunt-contrib-uglify": "latest",
     "grunt-contrib-watch": "latest",
-    "jshint-stylish": "latest"
+    "jshint-stylish": "latest",
+    "grunt-sync": "latest"
   }
 }
